Implement Zen Mode, refactor ScoreManager and apply code cleanup
- Added "Zen Mode" button to Main Menu
- Disabled high score saving and level progression in Zen Mode and auto restart instead of game over screen
- Disabled danger effects in Zen Mode for a relaxed experience
- Extracted file I/O from ScoreManager to ScoreFileHandler
- Removed redundant variable initializers and simplified collection access (.getFirst)